cool loading scene + bugfixes